server connecting with db  properly